objects/SLP_ES_Emp_HRDD_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Business_Group_Id__c</fullName>
        <label>Business_Group_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <length>202</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <label>Emp_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Number__c</fullName>
        <label>Emp_Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <label>Region_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>102</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SLP_ES_Emp_HRDD_Feed</label>
    <nameField>
        <displayFormat>EMP-{00000000}</displayFormat>
        <label>SLP_ES_Emp_HRDD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLP_ES_Emp_HRDD_Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>